<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alryada.etqan.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_red">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo"/>
        </RelativeLayout>


        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/hint_user_name"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:padding="16dp"
            android:textColor="@color/app_red"
            app:met_hideUnderline="true"
            android:background="@drawable/edit_text_border"
            android:textColorHint = "@color/icon_gray" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:padding="16dp"
            android:textColor="@color/app_red"
            app:met_hideUnderline="true"
            android:background="@drawable/edit_text_border"
            android:textColorHint = "@color/icon_gray" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/hint_address"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:padding="16dp"
            app:met_hideUnderline="true"
            android:textColor="@color/app_red"
            android:background="@drawable/edit_text_border"
            android:textColorHint = "@color/icon_gray" />

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/hint_mobile"
            android:inputType="numberDecimal|numberSigned"
            android:textAlignment="center"
            android:padding="16dp"
            android:textColor="@color/app_red"
            app:met_hideUnderline="true"
            android:background="@drawable/edit_text_border"
            android:textColorHint = "@color/icon_gray" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/txt_phone"
            android:inputType="numberDecimal|numberSigned"
            android:textAlignment="center"
            android:padding="16dp"
            android:textColor="@color/app_red"
            app:met_hideUnderline="true"
            android:background="@drawable/edit_text_border"
            android:textColorHint = "@color/icon_gray" />



        <!--<com.rengwuxian.materialedittext.MaterialEditText-->
        <!--android:id="@+id/etPassword"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="8dp"-->
        <!--android:background="@drawable/button_background"-->
        <!--android:hint="@string/hint_password"-->
        <!--android:inputType="textPassword"-->
        <!--android:paddingLeft="8dp"-->
        <!--android:textColor="@color/app_red"-->
        <!--app:met_baseColor="@color/app_red"-->
        <!--app:met_floatingLabel="highlight"-->
        <!--app:met_floatingLabelText="@string/hint_password"-->
        <!--app:met_primaryColor="@color/app_red"-->
        <!--app:met_textColorHint="@color/app_red"/>  -->

        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:padding="16dp"
            android:textColor="@color/app_red"
            app:met_hideUnderline="true"
            android:background="@drawable/edit_text_border"
            android:textColorHint = "@color/icon_gray" />


        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:id="@+id/etConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:padding="16dp"
            android:textColor="@color/app_red"
            app:met_hideUnderline="true"
            android:background="@drawable/edit_text_border"
            android:textColorHint = "@color/icon_gray" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/txt_gender"
            android:layout_marginStart="16dp"
            android:textSize="18sp"/>

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:padding="4dp">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingEnd="8dp"
                android:text="@string/txt_male"/>

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_female"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginStart="8dp">

            <CheckBox
                android:id="@+id/cbTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_accept_terms"
                />
            <TextView
                android:id="@+id/btnTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_terms_and_condintions"
                android:textColor="@color/app_red"
                android:paddingStart="4dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_red_dark"
            android:enabled="true"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_orange"
            android:text="@string/log_in"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>
