<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Fragments.CreditCardFragment">


    <TextView
        android:id="@+id/cedit_card_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/app_red"
        android:gravity="center"
        android:text="@string/credit_card_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/credit_card_price"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/gray"
        android:gravity="center"
        android:text="@string/credit_card_price"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cedit_card_title" />

    <EditText
        android:id="@+id/credit_card_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/credit_card_number_hint"
        android:inputType="number"
        android:padding="16dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credit_card_price" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credit_card_num">

        <EditText
            android:id="@+id/credit_card_expire_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/credit_card_expiredate_hint"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/credit_card_cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/credit_card_cvv_hint"
            android:inputType="number"
            android:padding="16dp"
            android:textSize="12sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/credit_card_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/credit_card_name_hint"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/credit_card_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_red_app"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/credit_card_pay_btn"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credit_card_name" />

</android.support.constraint.ConstraintLayout>