<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alryada.etqan.ServiceActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cvToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgBackBtn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="6dp"
                android:src="@drawable/ic_back"
                android:tint="@color/light_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:text="@string/title_service_details"
                android:textSize="18sp"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relSelectService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">


            <TextView
                android:id="@+id/serviceImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:text="@string/txt_service"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <Spinner
                android:id="@+id/spServices"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/serviceImg"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/nationalities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:text="@string/txt_nationality"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <Spinner
                android:id="@+id/spNationalities"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/nationalities"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/numberOfEmpolyes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:text="@string/txt_number_of_employees"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/etNumOfEmployees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/numberOfEmpolyes"
                android:inputType="number"
                android:maxLength="3"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/txt_gender"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingEnd="8dp"
                android:text="@string/txt_male"/>

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_female"/>

        </RadioGroup>

        <Button
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:background="@color/app_blue"
            android:padding="12dp"
            android:text="@string/txt_done"
            android:textColor="@color/white"
            />

    </LinearLayout>

</LinearLayout>
